# anthropogenic_sound_identification

./: .gitignore  .gitmodules  COMPLETE_DIAGNOSTIC_REPORT.txt  DIAGNOSTIC_REPORT.py  EDGE_ARTIFACT_FIX.md  README.md  analyze_separation_output.py  analyze_spectrograms_only.py  check_resampling.py  extract_labels.py  extract_labels_fixed.py  generate_analysis.py  pyproject.toml  run_airplane_validation_both_classifiers.py  run_bird_validation_both_classifiers.py  test_edge_artifacts.py  test_model_output.py  test_tuss_padded_resampling.py  test_upsampling.py  trace_inference.py  unique_labels.txt  visualize_tuss_edge_fix.py
configs/optuna_tuning/: README.md  sudormrf_tuning.yaml
configs/tuning/: clapsep_tuning.yaml  sudormrf_tuning.yaml  tuss_tuning.yaml
docs/: SAMPLING_COMPARISON.md  WEBDATASET_VS_FILE_LOADING.md
docs/reports/: label_extraction_summary.txt
scripts/: OPTUNA_BIRDS_OPTIMIZATION.md  README_OPTUNA_TUNING.md  create_combined_metadata.py  create_webdataset.py  get_labels_freesound_curation.py  optuna_hyperparameter_tuning.py  optuna_tune_models.py  run_validation.py  verify_harness_on_demo.py
scripts/analysis/: analyze_separation_output.py  analyze_spectrograms_only.py  generate_summary.py  visualize_tuss_edge_fix.py
scripts/data/: create_webdataset.py  get_labels_freesound_curation.py
scripts/debug/: check_resampling.py  trace_inference.py
scripts/demo/: verify_harness_on_demo.py
scripts/hpc/: CHECKLIST.md  QUICK_START.md  README.md  SUMMARY.md  WEBDATASET_SETUP.md  optuna_tune.pbs  requirements_hpc.txt  setup_venv.sh  train_clapsep.pbs  train_sudormrf.pbs  train_tuss.pbs
src/: test_coi_models.py
src/activity_filter/: mask_recycler.py  simpleChangeDetection.py
src/common/: RESAMPLING_CITATIONS.md  __init__.py  audio_dataset.py  audio_utils.py  audio_validation.py  audioset_downloader.py  augmentations.py  coi_training.py  decoder.py  downloader.py  dump_wavs.py  paths.py  training_utils.py  validation.py  webdataset_utils.py
src/dataloader/: datasetloader.py
src/examples/: demo_mask_recycling.py  orchestration_example.py
src/finetuning/: __init__.py  callbacks.py  cli.py  config.py  data.py  model.py  trainer.py
src/label_loading/: __init__.py  coi_labels.py  load_aerosonic_db.py  load_audioset.py  load_birdset.py  load_esc50.py  load_freesound.py  load_fsd50k.py  load_risoux_test.py  load_sounddesc.py  load_trains.py  metadata_loader.py  sampler.py
src/models/: base.py
src/orchestration/: __init__.py  __main__.py  presets.py  project.py  runner.py  sound_class.py
src/pipeline/: README.md  __init__.py  separation_pipeline.py
src/tag_analysis/: label_counting.ipynb  label_mapping.ipynb
src/tags/: label_counting.ipynb  label_mapping.ipynb  tag_analysis.ipynb
src/tests/: test_mask_recycling.py
src/validation_functions/: CONFIGURABLE_COI_USAGE.md  README.md  README_NOISE_INCREASE.md  VALIDATION_GUIDE.md  analyze_prompt_divergence.py  audit_dataset_contamination.py  confusion_matrix.py  copy_false_negatives.py  demo_separation.py  diagnose_masks.py  diagnose_models.py  metrics.py  plot_confusion_matrices.py  (+27 more)
tags/: label_counting.ipynb
(+339 files in other folders)
