[project]
name = "anthropogenic-noise-detection"
version = "0.1.0"
description = "Detect and identify man made noise in field recordings from Brazil"
authors = [
    {name = "Ben De Meurichy",email = "48103261+Bendemeurichy@users.noreply.github.com"}
]
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "kaleido (>=1.1.0,<2.0.0)",
    "rdflib (>=7.4.0,<8.0.0)",
    "owlready2 (>=0.48,<0.49)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "resampy (>=0.4.3,<0.5.0)",
]
[tool.poetry]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
