[project]
name = "anthropogenic-noise-detection"
version = "0.1.0"
description = "Detect and identify man made noise in field recordings from Brazil"
authors = [
    {name = "Ben De Meurichy",email = "48103261+Bendemeurichy@users.noreply.github.com"}
]
readme = "README.md"

requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy (>=2.3.3,<3.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "nbformat (>=5.10.4,<6.0.0)",
    "kaleido (>=1.1.0,<2.0.0)",
    "rdflib (>=7.4.0,<8.0.0)",
    "owlready2 (>=0.48,<0.49)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "soundfile (>=0.13.1,<0.14.0)",
    "resampy (>=0.4.3,<0.5.0)",
    "sounddevice (>=0.5.3,<0.6.0)",
    "optuna (>=4.6.0,<5.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchaudio (>=2.9.1,<3.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "librosa (>=0.11.0,<0.12.0)",
    "scipy (>=1.16.3,<2.0.0)",
    "matplotlib (>=3.10.7,<4.0.0)",
    "progress (>=1.6.1,<2.0.0)",
    "thop (>=0.1.1.post2209072238,<0.2.0)",
    "comet-ml (>=3.55.0,<4.0.0)",
    "glob2 (>=0.7,<0.8)",
    "psutil (>=7.1.3,<8.0.0)",
    "joblib (>=1.5.2,<2.0.0)",
    "pytorch-memlab (>=0.3.0,<0.4.0)",
    "pytorch-warmup (>=0.2.0,<0.3.0)",
    "torchmetrics (>=1.8.2,<2.0.0)",
    "torchcodec (>=0.9.1,<0.10.0)",
    "tensorflow (>=2.20.0,<3.0.0)",
    "tensorflow-hub (>=0.16.1,<0.17.0)",
    "tokenizers (>=0.22.2,<0.23.0)",
    "sentence-transformers (>=5.2.2,<6.0.0)",
    "transformers (>=5.1.0,<6.0.0)",
]
[tool.poetry]
package-mode=false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
